Mitigated issue where the waves had a small margin on certain screen widths Moved the menu button out of the navbar Removed logo and close button from sidebar Sidebar is no longer visible on large screens

--- a/src/stylesheets/base/_animations.scss
+++ b/src/stylesheets/base/_animations.scss
@@ -22,7 +22,7 @@
         position:absolute;
         left:-0px;
         right:-0px;
-        bottom:0;
+        bottom:-2px;
         animation: wave 25s linear infinite;     
         background-position-y:top;   
         @media (min-height: 1000px) {
