--- a/src/stylesheets/components/_buttons.scss
+++ b/src/stylesheets/components/_buttons.scss
@@ -97,3 +97,21 @@
     transform:scale(.9);
   }
 }
+
+.dd-menu-btn {
+    @extend 
+        .d-inline-flex,
+        .d-md-none,
+        .position-absolute;
+    top: 16px;
+    z-index:99;
+    background:none;
+    border:none;
+    left:16px;
+    color:$black;
+    transition: color .2s;
+    pointer-events:auto;
+    &[aria-expanded=true] {
+      color:$white;
+    }
+}
